echo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1service
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - port: 6666 # service's port. A pod will communicate to app1 pod from 6666 to 7777. 6666 is internal cluster port
      targetPort: 7777 # container's port
      nodePort: 30001 # a node will communicate to app1 pod from 30001 to 7777 from outside the cluster
